--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button onclick="propose()">Yes, Of course </button>
         <script>
             function propose() {
-                var msg = 'I Love You💖'
+                var msg = 'I Love You 2 💖'
                 document.getElementById('message').innerText = msg
             }
             function ppropose() {
