--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style>
             h1{
                 color: red;
-                font-size: 100px;
+                font-size: 80px;
                 font-family: sans-serif;
                 text-align: center;
 
@@ -17,7 +17,7 @@
                 background-color: goldenrod;
                 height: 150px;
                 border-radius: 20px;
-                font-size: 50px;
+                font-size: 40px;
                 font-weight: bold;
                 margin: 30px;
 
@@ -26,7 +26,7 @@
 
     </head>
     <body>
-        <h1 id="message">Will you be my life partner💞? </h1>
+        <h1 id="message"> Shojjoti will you be my life partner💞? </h1>
         <button onclick="ppropose()">NO</button>
         <button onclick="propose()">Yes, Of course </button>
         <script>
