--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </head>
     <body>
-        <h1 id="message"> Shojjoti will you be my life partner💞? </h1>
+        <h1 id="message"> Will you be my life partner💞? </h1>
         <button onclick="ppropose()">NO</button>
         <button onclick="propose()">Yes, Of course </button>
         <script>
